--- a/index.html
+++ b/index.html
@@ -3,12 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="styles/style.css">
   <title>Научиться учиться</title>
 </head>
-<body>
+<body class="body">
   <div class="page">
     <header class="header">
-
+      <logo class="logo logo_place_header"></logo>
+      <h1 class="header__title">Научиться учиться</h1>
+      <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a class="header__subtitle_link" href="#">Узнать</a></p>
+      <img class="header__main-illustration" alt="header-image" src="./images/header-image.png">
     </header>
     <main class="content">
       <section class="description">
