--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a class="header__subtitle_link" href="#">Узнать</a></p>
       <img class="header__main-illustration" alt="header-image" src="./images/header-image.png">
+      <div class="header__square-pic"></div>
     </header>
     <main class="content">
       <section class="description">
