--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="styles/normalize.css">
   <link rel="stylesheet" href="styles/style.css">
   <title>Научиться учиться</title>
 </head>
@@ -11,18 +12,93 @@
     <header class="header">
       <logo class="logo logo_place_header"></logo>
       <h1 class="header__title">Научиться учиться</h1>
-      <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a class="header__subtitle_link" href="#">Узнать</a></p>
+      <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a class="header__subtitle_link" href="#">Узнать &#8594;</a></p>
       <img class="header__main-illustration" alt="header-image" src="./images/header-image.png">
       <div class="header__square-pic"></div>
     </header>
     <main class="content">
       <section class="description">
+        <div class="two-columns">
+          <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
+          <div class="two-columns__main-text">
+            <p class="two-columns__main-text_paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
+            <p class="two-columns__main-text_paragraph two-columns__main-text_paragraph-mid"><span class="two-columns__span-accent">Вывод:</span> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
+            <p class="two-columns__main-text_paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
+          </div>
+        </div>
       </section>
 
       <section class="digits">
+        <div class="digits__section-title">
+          <h1 class="digits__section-title_text">Цифры и факты</h1>
+        </div>
+        <div class="digits__section-subtitle">
+          <h2 class="digits__section-subtitle_text">Про учёбу и мозг</h2>
+        </div>
+        <div class="table">
+          <div class="table__cell">
+            <h3 class="table__cell_heading">86 миллиардов</h3>
+            <div>
+              <p class="table__cell_text_general">Число нейронов в мозге человека</p>
+              <p class="table__cell_text_sub"></p>
+            </div>
+          </div>
+          <div class="table__cell">
+            <h3 class="table__cell_heading">2.1 миллиарда</h3>
+            <div>
+              <p class="table__cell_text_general">Число нуждающихся в повышении квалификации</p>
+              <p class="table__cell_text_sub">Всемирный Банк, 2017</p>
+            </div>
+          </div>
+          <div class="table__cell">
+            <h3 class="table__cell_heading">1000 терабайт</h3>
+            <div>
+              <p class="table__cell_text_general">Объём памяти человека</p>
+              <p class="table__cell_text_sub"></p>
+            </div>
+          </div>
+          <div class="table__cell">
+            <h3 class="table__cell_heading">500 триллионов</h3>
+            <div>
+              <p class="table__cell_text_general">Число ответственных за обучение нервных синапсов у взрослого человека</p>
+              <p class="table__cell_text_sub"></p>
+            </div>
+          </div>
+          <div class="table__cell">
+            <h3 class="table__cell_heading">420 миллионов</h3>
+            <div>
+              <p class="table__cell_text_general">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
+              <p class="table__cell_text_sub">Всемирный Банк, 2017</p>
+            </div>
+          </div>
+          <div class="table__cell">
+            <h3 class="table__cell_heading">17–20 лет</h3>
+            <div>
+              <p class="table__cell_text_general">Пик обучаемости</p>
+              <p class="table__cell_text_sub"></p>
+            </div>
+          </div>
+          <div class="table__cell">
+            <h3 class="table__cell_heading">1885 год</h3>
+            <div>
+              <p class="table__cell_text_general">Открытие кривой забывания</p>
+              <p class="table__cell_text_sub"></p>
+            </div>
+          </div>
+          <div class="table__cell">
+            <h3 class="table__cell_heading">1889 год</h3>
+            <div>
+              <p class="table__cell_text_general">Открытие условного рефлекса</p>
+              <p class="table__cell_text_sub"></p>
+            </div>
+          </div>
+        </div>
       </section>
 
       <section class="feynman">
+        <h1 class="feynman__title">Метод Фейнмана</h1>
+        <h2 class="feynman__subtitle">Выучить и не забыть.</h2>
+        <a class="feynman__link" src="#">Подробнее &#8594;</a>
       </section>
 
       <section class="kaufman">
