--- a/index.html
+++ b/index.html
@@ -39,56 +39,56 @@
           <div class="table__cell">
             <h3 class="table__cell_heading">86 миллиардов</h3>
             <div>
-              <p class="table__cell_text_general">Число нейронов в мозге человека</p>
+              <p class="table__cell_text">Число нейронов в мозге человека</p>
               <p class="table__cell_text_sub"></p>
             </div>
           </div>
           <div class="table__cell">
             <h3 class="table__cell_heading">2.1 миллиарда</h3>
             <div>
-              <p class="table__cell_text_general">Число нуждающихся в повышении квалификации</p>
+              <p class="table__cell_text">Число нуждающихся в повышении квалификации</p>
               <p class="table__cell_text_sub">Всемирный Банк, 2017</p>
             </div>
           </div>
           <div class="table__cell">
             <h3 class="table__cell_heading">1000 терабайт</h3>
             <div>
-              <p class="table__cell_text_general">Объём памяти человека</p>
+              <p class="table__cell_text">Объём памяти человека</p>
               <p class="table__cell_text_sub"></p>
             </div>
           </div>
           <div class="table__cell">
             <h3 class="table__cell_heading">500 триллионов</h3>
             <div>
-              <p class="table__cell_text_general">Число ответственных за обучение нервных синапсов у взрослого человека</p>
+              <p class="table__cell_text">Число ответственных за обучение нервных синапсов у взрослого человека</p>
               <p class="table__cell_text_sub"></p>
             </div>
           </div>
           <div class="table__cell">
             <h3 class="table__cell_heading">420 миллионов</h3>
             <div>
-              <p class="table__cell_text_general">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
+              <p class="table__cell_text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
               <p class="table__cell_text_sub">Всемирный Банк, 2017</p>
             </div>
           </div>
           <div class="table__cell">
             <h3 class="table__cell_heading">17–20 лет</h3>
             <div>
-              <p class="table__cell_text_general">Пик обучаемости</p>
+              <p class="table__cell_text">Пик обучаемости</p>
               <p class="table__cell_text_sub"></p>
             </div>
           </div>
           <div class="table__cell">
             <h3 class="table__cell_heading">1885 год</h3>
             <div>
-              <p class="table__cell_text_general">Открытие кривой забывания</p>
+              <p class="table__cell_text">Открытие кривой забывания</p>
               <p class="table__cell_text_sub"></p>
             </div>
           </div>
           <div class="table__cell">
             <h3 class="table__cell_heading">1889 год</h3>
             <div>
-              <p class="table__cell_text_general">Открытие условного рефлекса</p>
+              <p class="table__cell_text">Открытие условного рефлекса</p>
               <p class="table__cell_text_sub"></p>
             </div>
           </div>
@@ -102,9 +102,106 @@
       </section>
 
       <section class="kaufman">
+        <div class="kaufman__section-title_theme_dark">
+          <h1 class="kaufman__section-title_text_theme_dark">Принципы обучения</h1>
+        </div>
+        <div class="kaufman__section-subtitle_theme_dark">
+          <h2 class="kaufman__section-subtitle_text_theme_dark">от Джоша Кауфмана</h2>
+        </div>
+        <div class="table_theme_dark">
+          <div class="table__cell_theme_dark">
+            <h3 class="table__cell_heading_theme_dark">1</h3>
+            <div>
+              <p class="table__cell_text_theme_dark">Выберите привлекательный проект.</p>
+
+            </div>
+          </div>
+          <div class="table__cell_theme_dark">
+            <h3 class="table__cell_heading_theme_dark">2</h3>
+            <div>
+              <p class="table__cell_text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
+
+            </div>
+          </div>
+          <div class="table__cell_theme_dark">
+            <h3 class="table__cell_heading_theme_dark">3</h3>
+            <div>
+              <p class="table__cell_text_theme_dark">Определите целевой уровень мастерства.</p>
+
+            </div>
+          </div>
+          <div class="table__cell_theme_dark">
+            <h3 class="table__cell_heading_theme_dark">4</h3>
+            <div>
+              <p class="table__cell_text_theme_dark">Разбейте навык на элементы.</p>
+
+            </div>
+          </div>
+          <div class="table__cell_theme_dark">
+            <h3 class="table__cell_heading_theme_dark">5</h3>
+            <div>
+              <p class="table__cell_text_theme_dark">Приготовьте всё необходимое для занятий.</p>
+
+            </div>
+          </div>
+          <div class="table__cell_theme_dark">
+            <h3 class="table__cell_heading_theme_dark">6</h3>
+            <div>
+              <p class="table__cell_text_theme_dark">Устраните препятствия для занятий.</p>
+
+            </div>
+          </div>
+          <div class="table__cell_theme_dark">
+            <h3 class="table__cell_heading_theme_dark">7</h3>
+            <div>
+              <p class="table__cell_text_theme_dark">Выделите специальное время для занятий.</p>
+
+            </div>
+          </div>
+          <div class="table__cell_theme_dark">
+            <h3 class="table__cell_heading_theme_dark">8</h3>
+            <div>
+              <p class="table__cell_text_theme_dark">Создайте быстрые петли обратной связи.</p>
+
+            </div>
+          </div>
+          <div class="table__cell_theme_dark">
+            <h3 class="table__cell_heading_theme_dark">9</h3>
+            <div>
+              <p class="table__cell_text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
+
+            </div>
+          </div>
+          <div class="table__cell_theme_dark">
+            <h3 class="table__cell_heading_theme_dark">10</h3>
+            <div>
+              <p class="table__cell_text_theme_dark">Уделяйте внимание количеству и скорости.</p>
+
+            </div>
+          </div>
+        </div>
+        <img class="kaufman__triangle" alt="kaufman-triangle" src="./images/kaufman-triangle.svg">
       </section>
     </main>
     <footer class="footer">
+      <div class="footer__columns">
+        <div class="footer__columns_copyright">
+          <logo class="logo logo_place_footer"></logo>
+          <p class="footer__author">&copy;2020. Роман Мусин</p>
+        </div>
+        <div class="footer__columns_info">
+          <h1 class="footer__column-heading">О Практикуме</h1>
+          <a class="footer__column-links" href="#">Главная</a>
+          <a class="footer__column-links" href="#">Концепция</a>
+          <a class="footer__column-links" href="#">Наставники</a>
+        </div>
+        <div class="footer__columns_social">
+          <h1 class="footer__column-heading">Соцсети</h1>
+          <a class="footer__column-link" href="#"><img class="footer__social-icon" src="./images/facebook_color_white.svg"> Facebook</a>
+          <a class="footer__column-link" href="#"><img class="footer__social-icon" src="./images/vk_color_white.svg"> ВКонтакте</a>
+          <a class="footer__column-link" href="#"><img class="footer__social-icon" src="./images/instagram_color_white.svg"> Instagram</a>
+        </div>
+      </div>
 
     </footer>
   </div>
