--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
       <section class="feynman">
         <h1 class="feynman__title">Метод Фейнмана</h1>
         <h2 class="feynman__subtitle">Выучить и не забыть.</h2>
-        <a class="feynman__link" src="#">Подробнее &#8594;</a>
+        <a class="feynman__link" href="#">Подробнее &#8594;</a>
       </section>
 
       <section class="kaufman">
