--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             <h3 class="table__heading">6</h3>
             <p class="table__text">Устраните препятствия для занятий.</p>
           </li>
-          <li class="table__cel table__cell_theme_dark">
+          <li class="table__cell table__cell_theme_dark">
             <h3 class="table__heading">7</h3>
             <p class="table__text">Выделите специальное время для занятий.</p>
           </li>
