--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
 
       <section class="kaufman">
 
-        <h2 class="section-title__theme_dark">Принципы обучения</h2>
-        <p class="section-subtitle__theme_dark">от Джоша Кауфмана</p>
+        <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
+        <p class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</p>
 
         <ul class="table table_theme_dark">
           <li class="table__cell table__cell_theme_dark">
@@ -89,7 +89,7 @@
           </li>
           <li class="table__cell table__cell_theme_dark">
             <h3 class="table__heading">2</h3>
-            <p class="table__text_">Сосредоточьтесь на каком-то одном навыке.</p>
+            <p class="table__text">Сосредоточьтесь на каком-то одном навыке.</p>
           </li>
           <li class="table__cell table__cell_theme_dark">
             <h3 class="table__heading">3</h3>
@@ -101,7 +101,7 @@
           </li>
           <li class="table__cell table__cell_theme_dark">
             <h3 class="table__heading">5</h3>
-            <p class="table__cell_text_theme_dark">Приготовьте всё необходимое для занятий.</p>
+            <p class="table__text">Приготовьте всё необходимое для занятий.</p>
           </li>
           <li class="table__cell table__cell_theme_dark">
             <h3 class="table__heading">6</h3>
@@ -130,11 +130,11 @@
 
     <footer class="footer">
       <div class="footer__columns">
-        <div class="footer__column_content_copyright">
+        <div class="footer footer__column_content_copyright">
           <a class="logo logo_place_footer" href="#"></a>
           <p class="footer__author">&copy;2020. Роман Мусин</p>
         </div>
-        <nav class="footer__column_content_info">
+        <nav class="footer footer__column_content_info">
           <h4 class="footer__column-heading">О Практикуме</h4>
           <ul class="footer__column-links">
             <li><a class="footer__column-link" href="#">Главная</a></li>
@@ -142,11 +142,13 @@
             <li><a class="footer__column-link" href="#">Наставники</a></li>
           </ul>
           </nav>
-        <nav class="footer__column_content_social">
+        <nav class="footer footer__column_content_social">
           <h4 class="footer__column-heading">Соцсети</h4>
-          <a class="footer__column-link" href="#"><img class="footer__social-icon" alt="Фейсбук" src="./images/facebook_color_white.svg"> Facebook</a>
-          <a class="footer__column-link" href="#"><img class="footer__social-icon" alt="ВКонтакте" src="./images/vk_color_white.svg"> ВКонтакте</a>
-          <a class="footer__column-link" href="#"><img class="footer__social-icon" alt="Инстаграм" src="./images/instagram_color_white.svg"> Instagram</a>
+          <ul class="footer__column-links">
+            <a class="footer__column-link" href="#"><img class="footer__social-icon" alt="Фейсбук" src="./images/facebook_color_white.svg"> Facebook</a>
+            <a class="footer__column-link" href="#"><img class="footer__social-icon" alt="ВКонтакте" src="./images/vk_color_white.svg"> ВКонтакте</a>
+            <a class="footer__column-link" href="#"><img class="footer__social-icon" alt="Инстаграм" src="./images/instagram_color_white.svg"> Instagram</a>
+          </ul>
         </nav>
       </div>
 
