--- a/index.html
+++ b/index.html
@@ -130,11 +130,11 @@
 
     <footer class="footer">
       <div class="footer__columns">
-        <div class="footer__columns footer__column_content_copyright">
+        <div class="footer__column footer__column_content_copyright">
           <a class="logo logo_place_footer" href="#"></a>
           <p class="footer__author">&copy;2020. Роман Мусин</p>
         </div>
-        <nav class="footer__columns footer__column_content_info">
+        <nav class="footer__column footer__column_content_info">
           <h4 class="footer__column-heading">О Практикуме</h4>
           <ul class="footer__column-links">
             <li><a class="footer__column-link" href="#">Главная</a></li>
@@ -142,7 +142,7 @@
             <li><a class="footer__column-link" href="#">Наставники</a></li>
           </ul>
           </nav>
-        <nav class="footer__columns footer__column_content_social">
+        <nav class="footer__column footer__column_content_social">
           <h4 class="footer__column-heading">Соцсети</h4>
           <ul class="footer__column-links">
             <li><a class="footer__column-link" href="#"><img class="footer__social-icon" alt="Фейсбук" src="./images/facebook_color_white.svg"> Facebook</a></li>
