--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body class="body">
   <div class="page">
     <header class="header">
-      <a class="logo logo_place_header" href="#"></a>
+      <a class="logo logo_place_header" href="#" target="_self"></a>
       <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a class="header__link" href="#">Узнать &#8594;</a></p>
       <img class="header__main-illustration" alt="изображение заголовка" src="./images/header-image.png">
@@ -70,7 +70,7 @@
       </section>
 
       <section class="oakley">
-        <article class="two-columns two-columns__oakley">
+        <article class="two-columns">
           <h2 class="two-columns__brief">История Барбары Оакли.</h2>
           <div class="two-columns__main-text">
             <p class="two-columns__paragraph">С детства Барбаре не давалась математика. Она считала себя законченным гуманитарием, причём далеко не самым умным. В армии она изучала русский язык, чтобы получить надбавку, да так успешно, что её выдвинули в командиры. Но для продвижения по службе нужно было сдавать математику. И тогда Барбара придумала свой подход к точным наукам. Оказалось, если вам что-то «плохо даётся», ваши добытые трудом знания гораздо глубже, чем у тех, кому всё ясно с первого взгляда.</p>
@@ -81,7 +81,7 @@
       <section class="feynman">
         <h2 class="feynman__title">Метод Фейнмана</h2>
         <p class="feynman__subtitle">Выучить и не забыть.</p>
-        <a class="feynman__link" href="#">Подробнее &#8594;</a>
+        <a class="feynman__link" href="#" target="_self">Подробнее &#8594;</a>
       </section>
 
       <section class="digits">
@@ -136,7 +136,7 @@
           <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
           <div class="khan__book-container">
             <img class="khan__book-pic" src="images_sprint-2/khan-book.jpg" alt="Изображение книги">
-            <a class="khan__buy-link" href="#" >Купить книгу &#8594;</a>
+            <a class="khan__buy-link" href="#" target="_self">Купить книгу &#8594;</a>
           </div>
         </div>
       </section>
@@ -195,10 +195,10 @@
         <h2 class="section-title">Полезные ресурсы</h2>
         <h3 class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</h3>
         <ul class="resources__logo-zone">
-          <li class="resources__logo"><a href="#"><img src="images_sprint-2/logo/resources-arzamas.svg"></a></li>
-          <li class="resources__logo"><a href="#"><img src="images_sprint-2/logo/resources-n1.svg"></a></li>
-          <li class="resources__logo"><a href="#"><img src="images_sprint-2/logo/resources-strelka.svg"></a></li>
-          <li class="resources__logo"><a href="#"><img src="images_sprint-2/logo/resources-polka.svg"></a></li>
+          <li class="resources__logo"><a href="#" target="_blank"><img src="images_sprint-2/logo/resources-arzamas.svg" alt="Арзамас"></a></li>
+          <li class="resources__logo"><a href="#" target="_blank"><img src="images_sprint-2/logo/resources-n1.svg" alt="Н+1"></a></li>
+          <li class="resources__logo"><a href="#" target="_blank"><img src="images_sprint-2/logo/resources-strelka.svg" alt="Стрелка"></a></li>
+          <li class="resources__logo"><a href="#" target="_blank"><img src="images_sprint-2/logo/resources-polka.svg" alt="Полка"></a></li>
         </ul>
       </section>
     </main>
@@ -206,23 +206,23 @@
     <footer class="footer">
       <div class="footer__columns">
         <div class="footer__column footer__column_content_copyright">
-          <a class="logo logo_place_footer" href="#"></a>
+          <a class="logo logo_place_footer" href="#" target="_blank"></a>
           <p class="footer__author">&copy;2021. Роман Мусин</p>
         </div>
         <nav class="footer__column footer__column_content_info">
           <h4 class="footer__column-heading">О Практикуме</h4>
           <ul class="footer__column-links">
-            <li><a class="footer__column-link" href="#">Главная</a></li>
-            <li><a class="footer__column-link" href="#">Концепция</a></li>
-            <li><a class="footer__column-link" href="#">Наставники</a></li>
+            <li><a class="footer__column-link" href="#" target="_self">Главная</a></li>
+            <li><a class="footer__column-link" href="#" target="_self">Концепция</a></li>
+            <li><a class="footer__column-link" href="#" target="_self">Наставники</a></li>
           </ul>
           </nav>
         <nav class="footer__column footer__column_content_social">
           <h4 class="footer__column-heading">Соцсети</h4>
           <ul class="footer__column-links">
-            <li><a class="footer__column-link" href="#"><img class="footer__social-icon" alt="Фейсбук" src="./images/facebook_color_white.svg"> Facebook</a></li>
-            <li><a class="footer__column-link" href="#"><img class="footer__social-icon" alt="ВКонтакте" src="./images/vk_color_white.svg"> ВКонтакте</a></li>
-            <li><a class="footer__column-link" href="#"><img class="footer__social-icon" alt="Инстаграм" src="./images/instagram_color_white.svg"> Instagram</a></li>
+            <li><a class="footer__column-link" href="#" target="_blank"><img class="footer__social-icon" alt="Фейсбук" src="./images/facebook_color_white.svg"> Facebook</a></li>
+            <li><a class="footer__column-link" href="#" target="_blank"><img class="footer__social-icon" alt="ВКонтакте" src="./images/vk_color_white.svg"> ВКонтакте</a></li>
+            <li><a class="footer__column-link" href="#" target="_blank"><img class="footer__social-icon" alt="Инстаграм" src="./images/instagram_color_white.svg"> Instagram</a></li>
           </ul>
         </nav>
       </div>
