--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header class="header">
       <a class="logo logo_place_header" href="#" target="_self"></a>
       <h1 class="header__title">Научиться учиться</h1>
-      <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a class="header__link" href="#">Узнать &#8594;</a></p>
+      <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a class="header__link" href="#" target="_self">Узнать &#8594;</a></p>
       <img class="header__main-illustration" alt="изображение заголовка" src="./images/header-image.png">
       <div class="header__square-pic"></div>
     </header>
