--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 
       <section class="resources">
         <h2 class="section-title">Полезные ресурсы</h2>
-        <h3 class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</h3>
+        <P class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
         <ul class="resources__logo-zone">
           <li class="resources__logo"><a href="#" target="_blank"><img src="images_sprint-2/logo/resources-arzamas.svg" alt="Арзамас"></a></li>
           <li class="resources__logo"><a href="#" target="_blank"><img src="images_sprint-2/logo/resources-n1.svg" alt="Н+1"></a></li>
